docs/versioned_docs/version-1.0.1/intro.md
---
sidebar_position: 1
---

# Documentation

### Meet NilaJS

NilaJS is a REST api framework with expressive, elegant syntax. A web framework provides a structure and starting point for creating your application, allowing you to focus on creating something amazing while we sweat the details.

Built on top of Express.js and Mongodb
### Getting Started

Let's discover **The power of NilaJS in less than 5 minutes**.

Get started by **creating a new NilaJS project**.

```bash
npx nilajs create:app myapp
```

Here myapp is the application name change it according to your project. 

-------------------------------- OR -------------------------------- 

```bash
npm i nilajs -g
```

The above command will install nilajs cli globally on your system. After you can create a new NilaJS project using below command.

```bash
nila create:app myapp
```

### What you'll need

- [Node.js](https://nodejs.org/en/download/) version 16.14 or above:
  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.

