docs/versioned_docs/version-1.0.5/intro.md
---
title: Introduction
sidebar_position: 1
---

### Meet NilaJS

NilaJS is a REST api framework with expressive, elegant syntax. A web framework provides a structure and starting point for creating your application, allowing you to focus on creating something amazing while we sweat the details.

Built on top of Express.js and Mongodb
### Getting Started

Let's discover **The power of NilaJS in less than 5 minutes**.

Get started by **creating a new NilaJS project**.

```bash
npm i nilajs -g
```

The above command will install nilajs cli globally on your system. After you can create a new NilaJS project using below command.

```bash
nila create:app myapp
```

```bash
cd myapp

npm install

npm start
```
### What you'll need

- [Node.js](https://nodejs.org/en/download/) version 16.14 or above:
  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.
- [npm](https://nodejs.org/en/download/) version 9 or above


## Versions

- v1.0.5
- v1.0.4

:::danger

v1.0.4 depreceated

:::

- v1.0.3
- v1.0.2
- v1.0.1
- v1.0.0

## Versioning Policy

Nilajs releases closely follow [Semantic Versioning](https://semver.org/).

That means that with a version number `x.y.z`:

- when releasing critical bug fixes, we make a patch release by increasing the `z` number (ex: `1.2.3` to `1.2.4`).
- when releasing new features or non-critical fixes, we make a minor release by increasing the `y` number (ex: `1.2.3` to `1.3.0`).
- when releasing breaking changes, we make a major release by increasing the `x` number (ex: `1.2.3` to `2.0.0`).

